; ModuleID = '/home/carl/AnghaBench/freebsd/sys/ddb/extr_db_variables.c_db_get_variable.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/ddb/extr_db_variables.c_db_get_variable.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.db_variable = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @db_get_variable(i32* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  %4 = alloca %struct.db_variable*, align 8
  store i32* %0, i32** %3, align 8
  %5 = call i32 @db_find_variable(%struct.db_variable** %4)
  %6 = icmp ne i32 %5, 0
  br i1 %6, label %8, label %7

7:                                                ; preds = %1
  store i32 0, i32* %2, align 4
  br label %12

8:                                                ; preds = %1
  %9 = load %struct.db_variable*, %struct.db_variable** %4, align 8
  %10 = load i32*, i32** %3, align 8
  %11 = call i32 @db_read_variable(%struct.db_variable* %9, i32* %10)
  store i32 %11, i32* %2, align 4
  br label %12

12:                                               ; preds = %8, %7
  %13 = load i32, i32* %2, align 4
  ret i32 %13
}

declare dso_local i32 @db_find_variable(%struct.db_variable**) #1

declare dso_local i32 @db_read_variable(%struct.db_variable*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
